# stm32-gcc-cmake

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  main.cpp
app/: main.cpp
src/: library.cpp  library.h
